# src/main/java/happy/chicken/backend/api/ChallengesController.java
@@ -18,7 +18,7 @@ public class ChallengesController implements ChallengesApi {
     ChallengesService service;
 
     @Override
-    public ResponseEntity<Void> addDailyEntryForChallenge(final Integer challengeId, final DailyEntry dailyEntry) {
+    public ResponseEntity<Void> addDailyEntryForChallenge(final String challengeId, final DailyEntry dailyEntry) {
         service.addDailyEntry(challengeId, dailyEntry);
         return new ResponseEntity<>(HttpStatus.CREATED);
     }
@@ -30,21 +30,33 @@ public class ChallengesController implements ChallengesApi {
     }
 
     @Override
-    public ResponseEntity<Challenge> getChallenge(final Integer challengeId) {
+    public ResponseEntity<Void> deleteChallenge(String challengeId) {
+        service.deleteChallenge(challengeId);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteDailyEntry(String challengeId, String entryId) {
+        service.deleteDailyEntry(challengeId, entryId);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+    }
+
+    @Override
+    public ResponseEntity<Challenge> getChallenge(final String challengeId) {
         var challenge = service.getChallenge(challengeId);
         return ResponseEntity.ok(challenge);
     }
 
 
     @Override
-    public ResponseEntity<List<DailyEntry>> getChallengeEntriesForUser(final Integer challengeId) {
+    public ResponseEntity<List<DailyEntry>> getChallengeEntriesForUser(final String challengeId) {
         List<DailyEntry> entries = service.getChallengeEntriesForUser(challengeId);
         return ResponseEntity.ok(entries);
 
     }
 
     @Override
-    public ResponseEntity<Void> updateDailyEntry(final Integer challengeId, final Integer entryId, final DailyEntry dailyEntry) {
+    public ResponseEntity<Void> updateDailyEntry(final String challengeId, final String entryId, final DailyEntry dailyEntry) {
         service.updateDailyEntry(challengeId, entryId, dailyEntry);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
